--- a/0_Introduction.ipynb
+++ b/0_Introduction.ipynb
@@ -45,12 +45,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "AA7QRawRtkrk"
+      },
+      "id": "AA7QRawRtkrk"
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "f5e3c6e7",
       "metadata": {
         "id": "f5e3c6e7",
-        "outputId": "e25f79cf-c5b8-4498-a6bc-d8dd5c0216f9"
+        "outputId": "7378783d-9d82-4318-cffb-5d90492857a8"
       },
       "outputs": [
         {
@@ -69,68 +77,68 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "## Comentarios"
-      ],
-      "metadata": {
-        "id": "HXIWqagntisn"
-      },
-      "id": "HXIWqagntisn"
-    },
-    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "f66c5d54",
       "metadata": {
         "id": "f66c5d54"
       },
       "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
       "source": [
-        "# Este es un comentario"
-      ]
+        "## Comentarios"
+      ],
+      "metadata": {
+        "id": "CX6dOUn4tnoj"
+      },
+      "id": "CX6dOUn4tnoj"
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Este es un comentario"
+      ],
       "metadata": {
-        "id": "WiMoh3LxuN5O"
+        "id": "SC2atY44uH12"
       },
-      "id": "WiMoh3LxuN5O",
-      "execution_count": null,
+      "id": "SC2atY44uH12",
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Variables"
+        "##Variables"
       ],
       "metadata": {
-        "id": "bQuAFMwMvUbb"
+        "id": "dKeOrsXmvUhy"
       },
-      "id": "bQuAFMwMvUbb"
+      "id": "dKeOrsXmvUhy"
     },
     {
       "cell_type": "code",
       "source": [
-        "name = \"Miguel\"\n",
+        "name = \"Samuel\"\n",
         "print(name)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Oxk6exDbvWai",
-        "outputId": "bcb3b837-eae0-43d0-fcf1-bdd66a7ae611"
+        "id": "8Ot0NGT6vb6I",
+        "outputId": "e2cc4c6b-c35b-40b5-a689-f530d157ab4e"
       },
-      "id": "Oxk6exDbvWai",
+      "id": "8Ot0NGT6vb6I",
       "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Miguel\n"
+            "Samuel\n"
           ]
         }
       ]
@@ -138,31 +146,31 @@
     {
       "cell_type": "code",
       "source": [
-        "age = 31\n",
-        "height = 1.72"
+        "age = 16\n",
+        "height = 1.85"
       ],
       "metadata": {
-        "id": "-HKOXro6vnTk"
+        "id": "fHrsfMXGyBmY"
       },
-      "id": "-HKOXro6vnTk",
-      "execution_count": 3,
+      "id": "fHrsfMXGyBmY",
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(type(age))\n",
-        "print(type(height))"
+        "print (type(age))\n",
+        "print (type(height))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Te05uU0WyIGj",
-        "outputId": "a304f455-77db-434f-bddc-b509abc695e9"
+        "id": "z8BMAh4Wyga_",
+        "outputId": "4d474432-7139-45a9-a14a-f000f2a197b7"
       },
-      "id": "Te05uU0WyIGj",
-      "execution_count": 4,
+      "id": "z8BMAh4Wyga_",
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,11 +200,11 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ZKmdcWaJycOb",
-        "outputId": "fbb84d9c-54e5-4719-8b11-e6c609dfcf02"
+        "id": "r78RS60AyoA_",
+        "outputId": "d8d62079-5351-4611-cdce-b12e351dc6ce"
       },
-      "id": "ZKmdcWaJycOb",
-      "execution_count": 6,
+      "id": "r78RS60AyoA_",
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,18 +224,17 @@
         "a = 5\n",
         "b = 3.5\n",
         "c = 2\n",
-        "eq = 2 * a + 3 * b - 5 * c\n",
-        "print(eq)"
+        "print(2 * a + 3 * b - 5 * c)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "OYg6PeY4z0GG",
-        "outputId": "441ec10c-9e6e-440b-cca0-28a66ca946ed"
+        "id": "PkRWfNaoz17i",
+        "outputId": "a3c2e38c-dc3b-499c-8255-ce9e8b9bef12"
       },
-      "id": "OYg6PeY4z0GG",
-      "execution_count": 7,
+      "id": "PkRWfNaoz17i",
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,10 +249,9 @@
       "cell_type": "code",
       "source": [
         "# Cálculo de la potencia: dos elevado a la tres\n",
-        "a = 2 ** 3\n",
-        "\n",
-        "# Cálculo de la raíz cuadrada de cinco\n",
-        "b = 5 ** 0.5\n",
+        "a= 2 ** 3\n",
+        "b= 5 ** 0.5\n",
+        "# Cálculo de la raíz: raíz cuadrada de cinco\n",
         "print(a)\n",
         "print(b)"
       ],
@@ -253,11 +259,11 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "77p6AF8V1M3u",
-        "outputId": "fbf112a0-0b27-400a-ca16-191a068a377a"
+        "id": "LYLmq6Br0rpr",
+        "outputId": "2be9fdef-6cb0-4384-d40a-0103f5721add"
       },
-      "id": "77p6AF8V1M3u",
-      "execution_count": 10,
+      "id": "LYLmq6Br0rpr",
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,11 +287,11 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "6ARabg6z17YP",
-        "outputId": "f40ed1ba-d2d5-48c1-95dd-b38b5e2ab2c6"
+        "id": "E6dTz3rb2wwN",
+        "outputId": "28b90d73-16b0-4441-846c-5733aff384e3"
       },
-      "id": "6ARabg6z17YP",
-      "execution_count": 11,
+      "id": "E6dTz3rb2wwN",
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,37 +305,37 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Concatenación"
+        "##Concatenación"
       ],
       "metadata": {
-        "id": "sQKonWGL4ePm"
+        "id": "c-Ok6mzU4g6N"
       },
-      "id": "sQKonWGL4ePm"
+      "id": "c-Ok6mzU4g6N"
     },
     {
       "cell_type": "code",
       "source": [
-        "greetings = \"Good morning!\"\n",
-        "name = \"Miguel\"\n",
-        "age = 31\n",
-        "message = greetings + \" My name is \" + name + \" and I am \" + str(age) +  \" years old.\"\n",
-        "print(message)"
+        " greetings = \"Good Morning!\"\n",
+        " name = \"Samuel\"\n",
+        " age = 16\n",
+        " message = greetings + \" My name is \" + name + \" and I am \" + str(age) + \" years old.\"\n",
+        " print(message)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "GnF3iZZF3-te",
-        "outputId": "cc4506b4-093e-4882-a9e2-ee3b10ff0d7c"
+        "id": "ei7NEHO324p_",
+        "outputId": "377444c6-30b0-4256-f770-135e26b40705"
       },
-      "id": "GnF3iZZF3-te",
-      "execution_count": 12,
+      "id": "ei7NEHO324p_",
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Good morning! My name is Miguel and I am 31 years old.\n"
+            "Good Morning! My name is Samuel and I am 16 years old.\n"
           ]
         }
       ]
@@ -337,21 +343,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## +="
+        "##+="
       ],
       "metadata": {
-        "id": "IDIq1jAZ6ahr"
+        "id": "t-HbaaVi6hZp"
       },
-      "id": "IDIq1jAZ6ahr"
+      "id": "t-HbaaVi6hZp"
     },
     {
       "cell_type": "code",
       "source": [
         "price = 5000\n",
         "print(price)\n",
-        "price += 500\n",
+        "price+=500\n",
         "price *= 3\n",
-        "price /= 5\n",
+        "price /=5\n",
         "price -= 5\n",
         "print(price)"
       ],
@@ -359,11 +365,11 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "NtLW-Fpi4_at",
-        "outputId": "847b6d61-4e8e-4183-ba80-126e849cd8b6"
+        "id": "37qcYKij6jV3",
+        "outputId": "bf87de6c-f2f4-4fc4-f835-ea91b1a39ed1"
       },
-      "id": "NtLW-Fpi4_at",
-      "execution_count": 15,
+      "id": "37qcYKij6jV3",
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,22 +383,52 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XiYM5tPC6plZ"
+      },
+      "id": "XiYM5tPC6plZ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Multi-line\n"
+      ],
+      "metadata": {
+        "id": "EDG4eVOC8GEC"
+      },
+      "id": "EDG4eVOC8GEC"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_oRnqf5Y8IS2"
+      },
+      "id": "_oRnqf5Y8IS2",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "message = \"\"\"This is a paragraph.\n",
         "It has a lot of lines.\n",
-        "And if it has any rhyme.\n",
-        "That's great.\"\"\"\n",
+        "ANd if it has any rhyme\n",
+        "That´s great\"\"\"\n",
         "print(message)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "3purm8Cm6gfp",
-        "outputId": "8a106900-dc5d-457c-98f8-1262361332b5"
+        "id": "DFSmFFCO8Izx",
+        "outputId": "93f2b03e-5e8f-489a-9a12-b4232e91863d"
       },
-      "id": "3purm8Cm6gfp",
-      "execution_count": 19,
+      "id": "DFSmFFCO8Izx",
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,8 +436,8 @@
           "text": [
             "This is a paragraph.\n",
             "It has a lot of lines.\n",
-            "And if it has any rhyme.\n",
-            "That's great.\n"
+            "ANd if it has any rhyme\n",
+            "That´s great\n"
           ]
         }
       ]
@@ -410,9 +446,9 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "WmNrA0sW8QbP"
+        "id": "qsunAS6l8U9P"
       },
-      "id": "WmNrA0sW8QbP",
+      "id": "qsunAS6l8U9P",
       "execution_count": null,
       "outputs": []
     }
